# slurm_gpustat

./: .gitignore  pyproject.toml
slurm_gpustat/: slurm_gpustat.py
slurm_gpustat_test/: test_utils.py
